--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
         <div class="grid">
             <div class="form-group">
-                <label for="teacherName">Name des Lehrers *</label>
+                <label for="teacherName">Name des Empfängers *</label>
                 <input type="text" id="teacherName" required placeholder="Vor- und Nachname">
             </div>
 
@@ -285,7 +285,7 @@
         </div>
 
         <div class="form-group">
-            <label>Unterschrift Lehrer *</label>
+            <label>Unterschrift Schule *</label>
             <div class="signature-container">
                 <canvas id="signatureCanvas" width="700" height="200"></canvas>
                 <div class="button-group no-print">
