--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lieferschein - Schulgeräte</title>
 <style>
-    body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,sans-serif; max-width:800px; margin:20px auto; padding:20px; background:#f5f5f5; }
-    .container { background:white; padding:40px; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.1);}
-    @media print { body{background:white;margin:0;padding:0;} .container{box-shadow:none;padding:20px;max-width:100%;} .no-print{display:none !important;} .signature-container{border:1px solid #000;background:white;} canvas{border:none;} input,textarea,select{border:none;border-bottom:1px solid #333;padding:5px 0;} .info-box{display:none;} }
-    h1 { color:#333; border-bottom:3px solid #007AFF; padding-bottom:10px; margin-bottom:30px;}
-    .form-group{margin-bottom:20px;}
-    label{display:block;font-weight:600;margin-bottom:5px;color:#555;}
-    input,textarea,select{width:100%;padding:10px;border:2px solid #ddd;border-radius:5px;font-size:14px;box-sizing:border-box;}
-    input:focus,textarea:focus,select:focus{outline:none;border-color:#007AFF;}
-    .signature-container{border:2px dashed #007AFF;border-radius:5px;background:#f9f9f9;padding:10px;margin-top:10px;}
-    canvas{border:1px solid #ddd;border-radius:5px;background:white;cursor:crosshair;display:block;width:100%;touch-action:none;}
-    .button-group{display:flex;gap:10px;margin-top:10px;}
-    button{padding:12px 24px;border:none;border-radius:5px;font-size:14px;font-weight:600;cursor:pointer;transition:all 0.3s;}
-    .btn-primary{background:#007AFF;color:white;}
-    .btn-primary:hover{background:#0056b3;}
-    .btn-secondary{background:#6c757d;color:white;}
-    .btn-secondary:hover{background:#545b62;}
-    .btn-danger{background:#dc3545;color:white;}
-    .btn-danger:hover{background:#c82333;}
-    .info-box{background:#e7f3ff;border-left:4px solid #007AFF;padding:15px;margin:20px 0;border-radius:4px;}
-    .info-box h3{margin-top:0;color:#007AFF;}
-    .print-button{background:#34C759;font-size:16px;padding:15px 30px;}
-    .print-button:hover{background:#28a745;}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:20px;}
-    @media (max-width:600px){.grid{grid-template-columns:1fr;} body{padding:10px;} .container{padding:20px;}}
+body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,sans-serif; max-width:800px; margin:20px auto; padding:20px; background:#f5f5f5; }
+.container { background:white; padding:40px; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.1);}
+@media print { body{background:white;margin:0;padding:0;} .container{box-shadow:none;padding:20px;max-width:100%;} .no-print{display:none !important;} .signature-container{border:1px solid #000;background:white;} canvas{border:none;} input,textarea,select{border:none;border-bottom:1px solid #333;padding:5px 0;} .info-box{display:none;} }
+h1 { color:#333; border-bottom:3px solid #007AFF; padding-bottom:10px; margin-bottom:30px;}
+.form-group{margin-bottom:20px;}
+label{display:block;font-weight:600;margin-bottom:5px;color:#555;}
+input,textarea,select{width:100%;padding:10px;border:2px solid #ddd;border-radius:5px;font-size:14px;box-sizing:border-box;}
+input:focus,textarea:focus,select:focus{outline:none;border-color:#007AFF;}
+.signature-container{border:2px dashed #007AFF;border-radius:5px;background:#f9f9f9;padding:10px;margin-top:10px;}
+canvas{border:1px solid #ddd;border-radius:5px;background:white;cursor:crosshair;display:block;width:100%;touch-action:none;}
+.button-group{display:flex;gap:10px;margin-top:10px;}
+button{padding:12px 24px;border:none;border-radius:5px;font-size:14px;font-weight:600;cursor:pointer;transition:all 0.3s;}
+.btn-primary{background:#007AFF;color:white;}
+.btn-primary:hover{background:#0056b3;}
+.btn-secondary{background:#6c757d;color:white;}
+.btn-secondary:hover{background:#545b62;}
+.btn-danger{background:#dc3545;color:white;}
+.btn-danger:hover{background:#c82333;}
+.info-box{background:#e7f3ff;border-left:4px solid #007AFF;padding:15px;margin:20px 0;border-radius:4px;}
+.info-box h3{margin-top:0;color:#007AFF;}
+.print-button{background:#34C759;font-size:16px;padding:15px 30px;}
+.print-button:hover{background:#28a745;}
+.grid{display:grid;grid-template-columns:1fr 1fr;gap:20px;}
+@media (max-width:600px){.grid{grid-template-columns:1fr;} body{padding:10px;} .container{padding:20px;}}
 </style>
 </head>
 <body>
@@ -44,6 +44,8 @@
 </div>
 
 <form id="deliveryForm">
+
+<!-- Seriennummer manuell oder Barcode -->
 <div class="form-group">
 <label for="serialNumber">Seriennummer *</label>
 <input type="text" id="serialNumber" required placeholder="Barcode scannen oder eintippen">
@@ -79,7 +81,17 @@
 <label for="schoolName">Schulname *</label>
 <select id="schoolName" required>
 <option value="">Bitte Schule auswählen</option>
-<!-- Schulen wie bisher einfügen -->
+<option value="Adolf-Clarenbach-Schule">Adolf-Clarenbach-Schule</option>
+<option value="Albert-Schweitzer-Schule">Albert-Schweitzer-Schule</option>
+<option value="Alexander-v.-Humboldt-Gymnasium">Alexander-v.-Humboldt-Gymnasium</option>
+<option value="Burgunderschule">Burgunderschule</option>
+<option value="Comenius-Schule">Comenius-Schule</option>
+<option value="Die Brücke">Die Brücke</option>
+<option value="Dreikönigenschule">Dreikönigenschule</option>
+<option value="Friedrich-von-Bodelschwingh-Schule">Friedrich-von-Bodelschwingh-Schule</option>
+<option value="Gesamtschule an der Erft">Gesamtschule an der Erft</option>
+<option value="Gymnasium Norf">Gymnasium Norf</option>
+<!-- alle weiteren Schulen hier einfügen -->
 </select>
 </div>
 </div>
@@ -104,7 +116,6 @@
 <div class="form-group">
 <label>Seriennummern per CSV hinzufügen</label>
 <input type="file" id="csvFileInput" accept=".csv" class="no-print">
-<button type="button" class="btn-secondary no-print" id="csvImportBtn">📂 CSV importieren</button>
 </div>
 
 <div class="form-group">
@@ -158,4 +169,42 @@ function startDrawing(e){isDrawing=true; const rect=canvas.getBoundingClientRect
 function draw(e){if(!isDrawing)return; const rect=canvas.getBoundingClientRect(); const x=e.clientX-rect.left; const y=e.clientY-rect.top; ctx.strokeStyle='#000'; ctx.lineWidth=2; ctx.lineCap='round'; ctx.lineJoin='round'; ctx.beginPath(); ctx.moveTo(lastX,lastY); ctx.lineTo(x,y); ctx.stroke(); lastX=x; lastY=y;}
 function stopDrawing(){isDrawing=false;}
 function handleTouchStart(e){e.preventDefault(); const touch=e.touches[0]; const rect=canvas.getBoundingClientRect(); lastX=touch.clientX-rect.left; lastY=touch.clientY-rect.top; isDrawing=true;}
-function handleTouchMove(e){e.preventDefault(); if(!isDrawing)return; const touch=e.touches[0]; const rect=canvas.getBoundingClientRect(); const x=touch.clientX-rect.left; const y=touch.clientY-rect.top; ctx.strokeStyle='#000'; ctx.lineWidth=2; ctx.lineCap='round'; ctx.lineJoin='round'; ctx.beginPath(); ctx.moveTo(lastX,lastY); ctx.lineTo(x
+function handleTouchMove(e){e.preventDefault(); if(!isDrawing)return; const touch=e.touches[0]; const rect=canvas.getBoundingClientRect(); const x=touch.clientX-rect.left; const y=touch.clientY-rect.top; ctx.strokeStyle='#000'; ctx.lineWidth=2; ctx.lineCap='round'; ctx.lineJoin='round'; ctx.beginPath(); ctx.moveTo(lastX,lastY); ctx.lineTo(x,y); ctx.stroke(); lastX=x; lastY=y;}
+function clearSignature(){ctx.clearRect(0,0,canvas.width,canvas.height);}
+function resetForm(){document.getElementById('deliveryForm').reset(); clearSignature(); document.getElementById('deliveryDate').valueAsDate=new Date(); document.getElementById('serialsTable').querySelector('tbody').innerHTML='';}
+function isCanvasBlank(){const blank=document.createElement('canvas'); blank.width=canvas.width; blank.height=canvas.height; return canvas.toDataURL()===blank.toDataURL();}
+function printDocument(){const form=document.getElementById('deliveryForm'); if(!form.checkValidity()){alert('Bitte füllen Sie alle Pflichtfelder (*) aus!'); form.reportValidity(); return;} if(isCanvasBlank()){alert('Bitte unterschreiben Sie das Formular!'); return;} window.print();}
+
+// CSV Import automatisch beim Auswählen
+document.getElementById('csvFileInput').addEventListener('change', function() {
+    const fileInput = this;
+    if (!fileInput.files.length) return;
+    const file = fileInput.files[0];
+    const reader = new FileReader();
+    reader.onload = function(e){
+        const text = e.target.result;
+        parseCsv(text);
+    };
+    reader.readAsText(file);
+});
+
+// CSV Parser für mehrere Spalten
+function parseCsv(csvText){
+    const lines = csvText.split(/\r?\n/);
+    const tbody = document.getElementById('serialsTable').querySelector('tbody');
+    tbody.innerHTML='';
+    lines.forEach(line=>{
+        if(!line.trim()) return;
+        const cols=line.split(',');
+        const serial=cols[0]?cols[0].trim():'';
+        const deviceType=cols[1]?cols[1].trim():'';
+        const student=cols[2]?cols[2].trim():'';
+        const klass=cols[3]?cols[3].trim():'';
+        const note=cols[4]?cols[4].trim():'';
+        if(!serial) return;
+        const tr=document.createElement('tr');
+        [serial,deviceType,student,klass,note].forEach(val=>{const td=document.createElement('td'); td.textContent=val; tr.appendChild(td);});
+        tbody.appendChild(tr);
+    });
+}
+</script>
