--- a/index.html
+++ b/index.html
@@ -1,114 +1,130 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Lieferschein - Schulgeräte</title>
+<style>
+  body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,sans-serif; max-width:920px; margin:18px auto; padding:18px; background:#f5f5f5; }
+  .container { background:white; padding:24px; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.08); }
+  @media print { body{background:white;margin:0;padding:0} .container{box-shadow:none;padding:18px;max-width:100%} .no-print{display:none !important} canvas{border:none} input,textarea,select{border:none;border-bottom:1px solid #333;padding:5px 0} }
+  .form-group{margin-bottom:16px}
+  label{display:block;font-weight:600;margin-bottom:6px;color:#333}
+  input,textarea,select{width:100%;padding:10px;border:2px solid #e9e9e9;border-radius:6px;box-sizing:border-box;font-size:14px}
+  input:focus,textarea:focus,select:focus{outline:none;border-color:#007aff}
+  .grid{display:grid;grid-template-columns:1fr 1fr;gap:14px}
+  @media (max-width:640px){ .grid{grid-template-columns:1fr} }
+  .signature-container{border:2px dashed #007aff;padding:10px;border-radius:6px;background:#fafafa}
+  canvas{width:100%;height:160px;border:1px solid #ddd;border-radius:6px;background:#fff;touch-action:none; display:block}
+  .button-group{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
+  button{padding:10px 18px;border-radius:6px;border:none;cursor:pointer;font-weight:600}
+  .btn-primary{background:#007aff;color:#fff}
+  .btn-secondary{background:#6c757d;color:#fff}
+  .btn-danger{background:#dc3545;color:#fff}
+  table{width:100%;border-collapse:collapse;margin-top:8px}
+  th,td{padding:8px;border:1px solid #ddd;text-align:left}
+  tr:hover{background:#f1f7ff;cursor:pointer}
+  .note { color:#666;font-size:13px;margin-top:4px; }
+  .logo-placeholder { text-align:center; margin-bottom:10px; }
+  /* Hidden Spotlight für Mac-Index */
+  #spotlightText { display:none; }
+</style>
+</head>
+<body>
+<div class="container" id="pdfRoot">
+  <form id="deliveryForm" onsubmit="return false;">
+    <div class="grid">
+      <div class="form-group">
+        <label for="serialNumber">Seriennummer *</label>
+        <input type="text" id="serialNumber" required placeholder="Barcode scannen oder eintippen">
+      </div>
+      <div class="form-group">
+        <label for="teacherName">Name des Empfängers *</label>
+        <input type="text" id="teacherName" required placeholder="Vor- und Nachname">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="notes">Bemerkungen</label>
+      <textarea id="notes" rows="3" placeholder="Zusätzliche Informationen, Schäden etc."></textarea>
+    </div>
+
+    <div class="form-group">
+      <label>Unterschrift Schule *</label>
+      <div class="signature-container">
+        <canvas id="signatureCanvas" width="700" height="160"></canvas>
+        <div class="button-group no-print">
+          <button type="button" class="btn-danger" onclick="clearSignature()">Unterschrift löschen</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="button-group no-print">
+      <button type="button" class="btn-primary" id="savePdfBtn">💾 Als PDF speichern</button>
+      <button type="button" class="btn-secondary" onclick="resetForm()">🔄 Formular zurücksetzen</button>
+    </div>
+  </form>
+
+  <!-- Hidden für Mac Index / Spotlight -->
+  <div id="spotlightText"></div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 <script>
-  // Datum & Fokus
-  window.addEventListener('load', function(){
-    const sn = document.getElementById('serialNumber');
-    if (sn) { sn.focus(); }
-    const delivery = document.getElementById('deliveryDate');
-    const today = new Date().toISOString().slice(0,10);
-    if (delivery && !delivery.value) delivery.value = today;
-  });
+window.addEventListener('load', function(){
+  document.getElementById('serialNumber').focus();
+});
 
-  // Signature Canvas
-  const canvas = document.getElementById('signatureCanvas');
-  const ctx = canvas.getContext('2d');
-  let drawing=false, lastX=0, lastY=0;
-  function getXYFromEvent(e){
-    const rect = canvas.getBoundingClientRect();
-    if(e.touches && e.touches[0]) return {x:e.touches[0].clientX-rect.left,y:e.touches[0].clientY-rect.top};
-    return {x:e.clientX-rect.left,y:e.clientY-rect.top};
-  }
-  ['mousedown','touchstart'].forEach(ev => canvas.addEventListener(ev,e=>{drawing=true; const p=getXYFromEvent(e); lastX=p.x; lastY=p.y; e.preventDefault();}));
-  ['mousemove','touchmove'].forEach(ev => canvas.addEventListener(ev,e=>{if(!drawing)return; const p=getXYFromEvent(e); ctx.strokeStyle='#000'; ctx.lineWidth=2; ctx.lineCap='round'; ctx.beginPath(); ctx.moveTo(lastX,lastY); ctx.lineTo(p.x,p.y); ctx.stroke(); lastX=p.x; lastY=p.y; e.preventDefault();}));
-  ['mouseup','mouseout','touchend'].forEach(ev => canvas.addEventListener(ev,()=>{drawing=false;}));
+// Signature Canvas
+const canvas = document.getElementById('signatureCanvas');
+const ctx = canvas.getContext('2d');
+let drawing=false, lastX=0, lastY=0;
 
-  function clearSignature(){ ctx.clearRect(0,0,canvas.width,canvas.height); }
-  function isCanvasBlank(){ const blank=document.createElement('canvas'); blank.width=canvas.width; blank.height=canvas.height; return canvas.toDataURL()===blank.toDataURL(); }
+function getXYFromEvent(e){
+  const rect = canvas.getBoundingClientRect();
+  if (e.touches && e.touches[0]) return {x:e.touches[0].clientX - rect.left, y:e.touches[0].clientY - rect.top};
+  return {x:e.clientX - rect.left, y:e.clientY - rect.top};
+}
 
-  // Reset Form
-  function resetForm(){
-    document.getElementById('deliveryForm').reset();
-    clearSignature();
-    document.getElementById('serialsTable').querySelector('tbody').innerHTML='';
-    const today = new Date().toISOString().slice(0,10);
-    const delivery = document.getElementById('deliveryDate');
-    if(delivery) delivery.value = today;
-    setTimeout(()=>document.getElementById('serialNumber').focus(),50);
-    updateSpotlight();
-  }
+['mousedown','touchstart'].forEach(ev=>canvas.addEventListener(ev,e=>{
+  drawing=true; const p=getXYFromEvent(e); lastX=p.x; lastY=p.y; e.preventDefault();
+}));
+['mousemove','touchmove'].forEach(ev=>canvas.addEventListener(ev,e=>{
+  if(!drawing) return;
+  const p=getXYFromEvent(e);
+  ctx.strokeStyle='#000'; ctx.lineWidth=2; ctx.lineCap='round'; ctx.beginPath(); ctx.moveTo(lastX,lastY); ctx.lineTo(p.x,p.y); ctx.stroke();
+  lastX=p.x; lastY=p.y; e.preventDefault();
+}));
+['mouseup','mouseout','touchend'].forEach(ev=>canvas.addEventListener(ev,()=>{ drawing=false; }));
 
-  // CSV Import
-  document.getElementById('csvFileInput').addEventListener('change', function(){
-    const f=this.files && this.files[0];
-    if(!f) return;
-    const reader=new FileReader();
-    reader.onload=function(e){ parseCsv(e.target.result); };
-    reader.readAsText(f);
-    this.value='';
-  });
+function clearSignature(){ ctx.clearRect(0,0,canvas.width,canvas.height); }
+function isCanvasBlank(){ const blank=document.createElement('canvas'); blank.width=canvas.width; blank.height=canvas.height; return canvas.toDataURL()===blank.toDataURL(); }
 
-  function parseCsv(text){
-    const lines=text.split(/\r?\n/);
-    const tbody=document.getElementById('serialsTable').querySelector('tbody');
-    tbody.innerHTML='';
-    lines.forEach(line=>{
-      if(!line) return;
-      let serial=line.split(',')[0].trim();
-      if(serial.startsWith('"') && serial.endsWith('"')) serial=serial.slice(1,-1);
-      if(!serial) return;
-      addSerialToTable(serial);
-    });
-    updateSpotlight();
-  }
+function resetForm(){
+  document.getElementById('deliveryForm').reset();
+  clearSignature();
+  document.getElementById('serialNumber').focus();
+  document.getElementById('spotlightText').textContent='';
+}
 
-  // Seriennummer sofort hinzufügen, sobald Input geändert
-  const serialInput = document.getElementById('serialNumber');
-  serialInput.addEventListener('input', function(){
-    const val = serialInput.value.trim();
-    if(val==='') return;
-    addSerialToTable(val);
-    serialInput.value='';
-    updateSpotlight();
-  });
+// PDF Export
+document.getElementById('savePdfBtn').addEventListener('click', async function(){
+  const serial = document.getElementById('serialNumber').value.trim();
+  const teacher = document.getElementById('teacherName').value.trim();
+  const notes = document.getElementById('notes').value.trim();
 
-  function addSerialToTable(serial){
-    const tbody=document.getElementById('serialsTable').querySelector('tbody');
-    // Doppeltes vermeiden
-    const existing = Array.from(tbody.querySelectorAll('td')).map(td=>td.textContent);
-    if(existing.includes(serial)) return;
-    const tr=document.createElement('tr');
-    const td=document.createElement('td'); td.textContent=serial; tr.appendChild(td);
-    tr.addEventListener('click', ()=>{ serialInput.value=serial; serialInput.focus(); });
-    tbody.appendChild(tr);
-  }
+  if(!serial || !teacher || isCanvasBlank()){ alert('Seriennummer, Empfänger und Unterschrift müssen ausgefüllt sein!'); return; }
 
-  // Spotlight Update
-  function updateSpotlight(){
-    const serials=Array.from(document.querySelectorAll('#serialsTable tbody tr td')).map(td=>td.textContent.trim()).filter(Boolean);
-    const recipient=document.getElementById('teacherName').value.trim();
-    document.getElementById('spotlightText').textContent = serials.join(', ') + (recipient ? ', ' + recipient : '');
-  }
-  document.getElementById('teacherName').addEventListener('input', updateSpotlight);
+  // Hidden Spotlight für Mac
+  document.getElementById('spotlightText').textContent = serial + ' | ' + teacher;
 
-  // Save PDF
-  document.getElementById('savePdfBtn').addEventListener('click', async function(){
-    const city=document.getElementById('city').value.trim();
-    const sf=document.getElementById('schoolForm').value.trim();
-    const sname=document.getElementById('schoolName').value.trim();
-    const date=new Date().toISOString().slice(0,10);
-    const safe=str=>str.toString().trim().replace(/\s+/g,'_').replace(/[^a-zA-Z0-9_\-\.]/g,'');
-    const suggestionBody=(city&&sf&&sname)?`${safe(city)}_${safe(sf)}_${safe(sname)}`:'Lieferschein';
-    const suggestion=`${suggestionBody}_${date}`;
-    let filename=prompt('Bitte Dateinamen eingeben (ohne .pdf):',suggestion);
-    if(filename===null) return;
-    filename=filename.trim()||'Lieferschein';
-    const finalName=filename.endsWith('.pdf')?filename:(filename+'.pdf');
+  const today = new Date().toISOString().slice(0,10);
+  let filename = `Lieferschein_${today}.pdf`;
 
-    if(!city||!sf||!sname){ if(!confirm('Stadt / Schulform / Schulname sind nicht vollständig ausgefüllt. Trotzdem speichern?')) return; }
-    const tbody=document.getElementById('serialsTable').querySelector('tbody');
-    if(!tbody || !tbody.querySelector('tr')){ if(!confirm('Es sind keine Seriennummern vorhanden. Trotzdem speichern?')) return; }
-
-    const element=document.getElementById('pdfRoot');
-    const opt={ margin:[10,10,10,10], filename:finalName, image:{type:'jpeg',quality:0.98}, html2canvas:{scale:2,useCORS:true}, jsPDF:{unit:'mm',format:'a4',orientation:'portrait'} };
-    try{ await html2pdf().set(opt).from(element).save(); } catch(err){ alert('Fehler beim Erstellen des PDFs: '+(err?.message||err)); console.error(err); }
-  });
+  const element = document.getElementById('pdfRoot');
+  const opt = { margin:[10,10,10,10], filename:filename, image:{type:'jpeg', quality:0.98}, html2canvas:{scale:2,useCORS:true}, jsPDF:{unit:'mm',format:'a4',orientation:'portrait'} };
+  try{ await html2pdf().set(opt).from(element).save(); } catch(err){ alert('Fehler beim Erstellen des PDFs: '+(err.message||err)); console.error(err); }
+});
 </script>
+</body>
+</html>
