Insert logo above the title in index.html
Added a logo image above the title in the HTML.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@ tr:hover{background:#f1f7ff;cursor:pointer}
 <body>
 <div class="container" id="pdfRoot">
 
-<h2 style="border-bottom:3px solid #007aff;padding-bottom:8px">📦 Lieferschein - Schulgeräte</h2>
+<div style="text-align:center; border-bottom:3px solid #007aff; padding-bottom:8px; margin-bottom: 12px;">
+  <img src="logo.png" alt="Logo" style="height:80px;">
+</div>
+
 
 <form id="deliveryForm" onsubmit="return false;">
 
